# mdview

./: Cargo.toml  bundle.sh  generate_icon.swift
.github/workflows/: build.yml
assets/: mdview.icns
docs/: index.html
examples/: demo.md  linked.md
mdview-swift/: .gitignore  Package.swift  bundle.sh
mdview-swift/Sources/MdViewer/: AppDelegate.swift  Config.swift  DocumentContentView.swift  DocumentWindow.swift  FileWatcher.swift  HTMLWrapper.swift  MarkdownRenderer.swift  MarkdownWebView.swift  PlantUMLEncoder.swift  ResourceBundle.swift  SettingsHTML.swift  SettingsWindow.swift  WindowFrameStore.swift
mdview-swift/Sources/MdViewer/Resources/: style.css
mdview-swift/assets/: mdview.icns
src/: config.rs  main.rs  markdown.rs  plantuml.rs  viewer.rs  watcher.rs
src/themes/: modest.css  modest_dark.css
